chore: 프로젝트 초기 설정 수정

--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "vite-test",
+  "name": "keepsaker-frontend",
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "license": "MIT",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
@@ -45,7 +46,7 @@
     "eslint-plugin-storybook": "^0.6.13",
     "prettier": "^3.0.0",
     "storybook": "^7.1.0",
-    "typescript": "*",
+    "typescript": "^5.1.6",
     "vite": "^4.4.5"
   }
 }
