--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,6 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["src/**/*"],
+  "include": ["src/**/*.tsx", "src/**/*.ts",],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
