--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@tanstack/react-query": "^4.32.5",
     "@vanilla-extract/css": "^1.12.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.14.2"
   },
   "devDependencies": {
     "@storybook/addon-essentials": "^7.1.0",
