--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -6,5 +6,6 @@
     "module": "ESNext",
     "moduleResolution": "bundler",
     "allowSyntheticDefaultImports": true
-  }
+  },
+  "include":["src/**/*"]
 }
